@@ -3,6 +3,9 @@
 	* src/gnome-cmd-profile-component.cc:
 	advrename profiles: ref template_entry to keep it alive longer
 
+	* src/dialogs/gnome-cmd-manage-profile-dialog.cc:
+	advrename profiles: added supprt for profile editing
+
 2009-06-14  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-data.cc:
